--- a/Android/imagerecog/app/src/main/res/layout/activity_main.xml
+++ b/Android/imagerecog/app/src/main/res/layout/activity_main.xml
@@ -54,20 +54,19 @@
                 android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="#1AAE9F"
                 android:text="Pilih Gambar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/button2"
-                app:layout_constraintHorizontal_bias="0.504"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView"
-                app:layout_constraintVertical_bias="0.158" />
+                app:layout_constraintVertical_bias="0.157" />
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="56dp"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="#1AAE9F"
                 android:text="prediksi"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -140,6 +139,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView"
                 app:layout_constraintVertical_bias="1.0" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="109dp"
+                android:layout_height="45dp"
+                android:text="camera"
+                app:layout_constraintBottom_toBottomOf="@+id/button2"
+                app:layout_constraintEnd_toStartOf="@+id/button2"
+                app:layout_constraintHorizontal_bias="0.086"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView"
+                app:layout_constraintVertical_bias="0.931" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
